fix(AppSelect): add 'z-index' for popover

--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -27,4 +27,5 @@
 	/** z-index **/
 	--z-index-loader-absolute: 100000;
 	--z-index-sidebar: 100;
+	--z-index-popover: 10;
 }
