--- a/src/shared/ui/AppSelect/AppSelect.module.scss
+++ b/src/shared/ui/AppSelect/AppSelect.module.scss
@@ -8,6 +8,7 @@
 
 	&-options {
 		position: absolute;
+		z-index: var(--z-index-popover);
 
 		display: grid;
 		width: max-content;
